# markdowneditor

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js  スタートガイド.md
src/: editor.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: editor.rs  file_io.rs  main.rs  watcher.rs
