[package]
name = "markdownediter"
version = "0.1.0"
description = "Rustパワードなネイティブ Markdownエディタ"
authors = []
license = ""
repository = ""
edition = "2021"


[build-dependencies]
# Tauriのビルドスクリプト（アイコン埋め込みなどを行う）
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauriコア（ダイアログ・シェル・ファイルシステム機能を有効化）
tauri = { version = "1.5", features = [ "window-set-title", "window-hide", "window-close", "window-unmaximize", "window-start-dragging", "window-show", "window-minimize", "window-unminimize", "window-maximize", "window-set-fullscreen",
  "dialog-open",
  "dialog-save",
  "shell-open",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "fs-exists",
  "path-all",
] }

# JSONシリアライズ（TauriのコマンドはSerdeを必要とする）
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown → HTML パーサー（C++並みの速度）
pulldown-cmark = "0.9"

# ファイル変更監視
notify = "6.0"

# 非同期ランタイム（UIをブロックせずにファイルI/Oを行う）
tokio = { version = "1", features = ["full"] }

# ウィンドウキャッシュパス・アプリデータパスの取得
directories = "5.0"

[features]
# Tauri側のカスタムプロトコル（本番ビルド時に有効化）
custom-protocol = ["tauri/custom-protocol"]
